--- a/css/style.css
+++ b/css/style.css
@@ -1,192 +1,84 @@
 @charset "UTF-8";
 
+body {
+  background-color: rgb(255, 179, 226);
+}
+
+.menu {
+  list-style: none;
+  padding: 0;
+  background-color: #f474ee;
+  text-align: center;
+}
+
+.menu li {
+  display: inline-block;
+  text-align: center;
+}
+
+.menu li a {
+  text-decoration: none;
+  color: white;
+  padding: 20px;
+  display: block;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.menu li:hover {
+  background-color: rgb(243, 159, 232);
+}
+
+footer {
+  background-color: #fb9ed7;
+  color: #fff;
+  text-align: center;
+  padding: 20px;
+}
+
+body#templo marquee,
+body#razones marquee,
+body#especie marquee,
+body#egipcios marquee {
+  color: rgb(255, 255, 255);
+  font-size: 30px;
+  display: block;
+}
+
+body#especie h1 marquee {
+  color: white;
+}
+
 /* estilo para pantallas de pc*/
 @media screen and (min-width: 1024px) {
-    body {
-      background-color: rgb(255, 179, 226);
-    }
-    .menu {
-      list-style: none;
-      padding: 0;
-      background-color: #f474ee;
-      width: 100%;
-      max-width: 2000px;
-      margin: auto;
-      text-align: center;
-    }
-    .menu li {
-      display: inline-block;
-      text-align: center;
-    }
-    .menu li a {
-      text-decoration: none;
-      color: white;
-      padding: 20px;
-      display: block;
-      text-align: center;
-    }
-    .menu li:hover {
-      background-color: rgb(243, 159, 232);
-    }
-    footer {
-      background-color: #fb9ed7;
-      color: #fff;
-      text-align: center;
-      padding: 20px;
-    }
-    body#templo marquee {
-        color: rgb(255, 255, 255);
-        font-size: 30px;
-        display: inline-block;
-      }
-    }
-    body#razones marquee {
-        color: rgb(255, 255, 255);
-        font-size: 30px;
-        display: block;
-      }
-    body#especie marquee {
-        color: rgb(255, 255, 255);
-        font-size: 30px;
-        display: block;
-      }
-    body#especie h1 marquee {
-        color: white;
-        font-size: 30px;
-        display: block;
-      }
-    body#egipcios marquee {
-       color: rgb(255, 255, 255);
-       font-size: 30px;
-       display: block;
-      }
-    
-  /* estilo para pantallas tipo tablet */
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    body {
-      background-color: rgb(255, 179, 226);
-    }
-    .menu {
-      list
-      list-style: none;
-      padding: 0;
-      background-color: #f474ee;
-      width: 100%;
-      max-width: 2000px;
-      margin: auto;
-     text-align: center;
-    }
-    
-    
-    .menu li {
-      display: inline-block;
-      text-align: center;
-    }
-    .menu li a {
-      text-decoration: none;
-      color: white;
-      padding: 20px;
-      display: block;
-      text-align: center;
-    }
-    .menu li:hover {
-      background-color: rgb(243, 159, 232);
-    }
-    footer {
-      background-color: #fb9ed7;
-      color: #fff;
-      text-align: center;
-      padding: 20px;
-    }
-    body#templo marquee {
-        color: rgb(255, 255, 255);
-        font-size: 30px;
-        display: inline-block;
-      }
-    }
-    body#razones marquee {
-        color: rgb(255, 255, 255);
-        font-size: 30px;
-        display: block;
-      }
-    body#especie marquee {
-        color: rgb(255, 255, 255);
-        font-size: 30px;
-        display: block;
-      }
-    body#especie h1 marquee {
-        color: white;
-        font-size: 30px;
-        display: block;
-      }
-    body#egipcios marquee {
-        color: rgb(255, 255, 255);
-        font-size: 30px; 
-        display: block;
-      }
+  .menu {
+    max-width: 2000px;
+    margin: auto;
+  }
+}
 
-  /* estilo para pantalla movil */
+/* estilo para pantallas tipo tablet */
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .menu {
+    display: none;
+  }
+  .menu li {
+    padding: 1em;
+  }
+}
+
+/* estilo para pantalla movil */
 @media screen and (max-width: 767px) {
-    body {
-      background-color: rgb(255, 179, 226);
-    }
-    img{
-      margin-top: 0px;
-    }
-    .menu {
-      list-style: none;
-      padding: 0;
-      background-color: #f474ee;
-      width: auto;
-      max-width: 767px;
-      margin: auto;
-      text-align: center; 
-    }
-    .menu li {
-      display: block; 
-      text-align: center; 
-    }
-    .menu li a {
-      text-decoration: none;
-      color: white;
-      padding: 20px;
-      display: block;
-      text-align: center;
-    }
-    .menu li:hover {
-      background-color: rgb(243, 159, 232);
-    }
-    footer {
-      background-color: #fb9ed7;
-      color: #fff;
-      text-align: center;
-      padding: 20px;
-    }
-  body#templo marquee {
-        color: rgb(255, 255, 255);
-        font-size: 30px;
-        display: inline-block;
+  img {
+    margin-top: auto;
+    max-width: fit-content;
+  }
+  .menu {
+    width: 100%;
+    max-width: 2000px;
+    margin: auto;
+  }
 }
-    body#razones marquee {
-        color: rgb(255, 255, 255);
-        font-size: 30px;
-        display: block;
-}
-    body#especie marquee {
-       color: rgb(255, 255, 255);
-       font-size: 30px;
-       display: block;
- }
-    body#especie h1 marquee {
-        color: white;
-        font-size: 30px;
-        display: block;
-      }
-    body#egipcios marquee {
-        color: rgb(255, 255, 255);
-        font-size: 30px;
-        display: block;
-      }
-  
- }
+
+ 
 /*# sourceMappingURL=style.css.map */
