--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@ body {
   background-color: rgb(255, 179, 226);
 }
 
+body#razones marquee{
+  display: flex;
+}
+
 .menu {
   list-style: none;
   padding: 0;
