--- a/css/style.css
+++ b/css/style.css
@@ -62,9 +62,11 @@ body#especie h1 marquee {
 }
 
 /* estilo para pantallas tipo tablet */
-@media screen and (min-width: 767px) and (max-width: 1023px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .menu {
     display: none;
+    margin: auto;
+
   }
   .menu li {
     padding: 1em;
@@ -75,7 +77,7 @@ body#especie h1 marquee {
 }
 
 /* estilo para pantalla movil */
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 767px) and (max-width: 1022px) {
   img {
     margin-top: auto;
     max-width: fit-content;
