--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ body#especie h1 marquee {
 }
 
 /* estilo para pantalla movil */
-@media screen and (max-width: 768px) {
+@media screen and (min-width:360) (max-width: 768px) {
   img {
     margin-top: auto;
     max-width: 100%; 
